CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(deep_sort_cpp)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-Wall -std=c++11")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/lib)

# set header folder
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

# add source folder
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)
